demo-apps/simplenode/simplenode-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplenode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: simplenode-REPLACEWITHYOURID.agrabner-hotday.keptn.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  simplenode
                port:
                  number: 80
